logs and extent report